Fixing nav overlapping on concierge page

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -37,6 +37,10 @@ $nav-height: 100px;
 
   li:not(.button)
   {
+    a
+    {
+      color: #FFF;
+    }
     padding-left: 25px;
     padding-right: 25px;
     padding-top: 20px;
